[metadata]
name = hase
version = 0.1
description = Time-travel failures

[options]
python_requires = >= 3.5
py_modules = hase
install_requires =
  angr @ https://github.com/hase-project/angr/archive/e1b66e2eebe0756ad5a06a686d8a086528ad7cf6.zip
  cle @ https://github.com/angr/cle/archive/cd39642d6532ac2908ab6aa510240e9397341c92.zip
  claripy @ https://github.com/angr/claripy/archive/ca524cb2af19952d247ff072b38140b4eb8d21c1.zip
  pyvex @ https://github.com/angr/pyvex/archive/44a8f41d960e108610144335dac4f852e050e2e7.zip
  archinfo @ https://github.com/angr/archinfo/archive/d3eb03b047847d55fec71c06e9d2a15bc2f28d7d.zip
  pwntools @ https://github.com/hase-project/pwntools/archive/74a98908a19e00df399abd4b8e956abeabbd62ae.zip
  monkeyhex
  ipython
  qtconsole
  ipdb
  pygdbmi
  cffi >= 1.1.0
  # how to add PyQt5 here?
  # 'pyqt5'
tests_require =
  nose
test_suite = nose.collector
setup_requires =
  cffi>=1.1.0

[options.extras_require]
test = nose

[options.entry_points]
console_scripts =
  hase = hase:main
  hase-gui = hase.frontend:main

[pycodestyle]
max-line-length = 88
ignore = E501,E741,W503,E203,E261

[flake8]
max-line-length = 88
ignore = E501,E741,W503,E203,E261,F401,F841
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist

[mypy]
no_implicit_optional = True
disallow_untyped_defs = true
python_version = 3.5
python_executable = pypy3
strict_optional = True

[mypy-hase.symbex.procedures.*]
disallow_untyped_defs = False

[mypy-PyQt5.*]
ignore_missing_imports = True

[mypy-pygments.*]
ignore_missing_imports = True

[mypy-networkx.*]
ignore_missing_imports = True

[mypy-lxml.*]
ignore_missing_imports = True

[mypy-IPython.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-angr.*]
ignore_missing_imports = True

[mypy-cle.*]
ignore_missing_imports = True

[mypy-pygdbmi.*]
ignore_missing_imports = True

[mypy-archinfo.*]
ignore_missing_imports = True

[mypy-claripy.*]
ignore_missing_imports = True

[mypy-pwnlib.*]
ignore_missing_imports = True

[mypy-ipdb.*]
ignore_missing_imports = True

[mypy-capstone.*]
ignore_missing_imports = True

[mypy-qtconsole.*]
ignore_missing_imports = True

[mypy-bcc.*]
ignore_missing_imports = True

[mypy-nose.*]
ignore_missing_imports = True
