[metadata]
name = hase
version = 0.1
description = Time-travel failures

[options]
python_requires = >= 3.5
packages = find:
install_requires =
  angr @ https://github.com/hase-project/angr/archive/973c38daf96a46eae7bdfce6cf283cd1dd3a19a8.zip
  cle @ https://github.com/angr/cle/archive/28cbf5c5888b374b173410ef2e508b4eab7c02aa.zip
  claripy @ https://github.com/angr/claripy/archive/5dd63b4e19cc3080f0fddad56bc3f5419c12f864.zip
  ailment @ https://github.com/angr/ailment/archive/2f1c1d2bf99a843821efa6cc9c8f645cbc7e529b.zip
  pyvex @ https://github.com/angr/pyvex/archive/36ba7fefbece6c11a27933b5151b450a87856302.zip
  archinfo @ https://github.com/angr/archinfo/archive/d3eb03b047847d55fec71c06e9d2a15bc2f28d7d.zip
  pwntools @ https://github.com/hase-project/pwntools/archive/74a98908a19e00df399abd4b8e956abeabbd62ae.zip
  monkeyhex
  ipython
  qtconsole
  ipdb
  pygdbmi
  intervaltree
  cffi >= 1.1.0
  # how to add PyQt5 here?
  # 'pyqt5'
tests_require =
  nose
test_suite = nose.collector
setup_requires =
  cffi>=1.1.0
  setuptools>=38.3

[options.extras_require]
test = nose

[options.entry_points]
console_scripts =
  hase = hase:main
  hase-gui = hase.frontend:main

[pycodestyle]
max-line-length = 88
ignore = E501,E741,W503,E203,E261,E251 

[flake8]
max-line-length = 88
ignore = E501,E741,W503,E203,E261,F401
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist

[mypy]
no_implicit_optional = True
disallow_untyped_defs = true
python_version = 3.5
python_executable = pypy3
strict_optional = True

[mypy-hase.symbex.procedures.*]
disallow_untyped_defs = False

[mypy-PyQt5.*]
ignore_missing_imports = True

[mypy-pygments.*]
ignore_missing_imports = True

[mypy-networkx.*]
ignore_missing_imports = True

[mypy-lxml.*]
ignore_missing_imports = True

[mypy-IPython.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-angr.*]
ignore_missing_imports = True

[mypy-cle.*]
ignore_missing_imports = True

[mypy-pygdbmi.*]
ignore_missing_imports = True

[mypy-archinfo.*]
ignore_missing_imports = True

[mypy-claripy.*]
ignore_missing_imports = True

[mypy-pwnlib.*]
ignore_missing_imports = True

[mypy-ipdb.*]
ignore_missing_imports = True

[mypy-capstone.*]
ignore_missing_imports = True

[mypy-qtconsole.*]
ignore_missing_imports = True

[mypy-bcc.*]
ignore_missing_imports = True

[mypy-nose.*]
ignore_missing_imports = True

[mypy-intervaltree.*]
ignore_missing_imports = True
